@@ -12,4 +12,5 @@
 [2020-11-26]: correcing raycaster (casts and get_starts_to)
 [2020-11-26]: TODO: en-passant and get_captures, 
 [2020-11-26]:       but now engine can play Legal (1715) checkmate game
+[2020-11-26]:  get_captured_by(side) functions ( inindex.js, core/captures.js and game/osition.js)
 
